Change from phaser 2.7 min to 2.6 cdn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8" />
 	<title>Game</title>
 
-	<script type="text/javascript" src="js/vendor/phaser.min.js"></script>
+	<script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.js"></script>
+	<!-- <script type="text/javascript" src="js/vendor/phaser.min.js"></script> -->
   <!-- Game files - mind loading order -->
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/load.js"></script>
